--- a/src/style.scss
+++ b/src/style.scss
@@ -64,3 +64,37 @@
 .SearchResults .TitleList .titles-wrapper {
   max-width: 50vw;
 }
+
+.TitleList {
+  padding: 20px 40px;
+  box-sizing: border-box;
+  -webkit-transition: opacity 3s ease;
+  transition: opacity 3s ease;
+  opacity: 0;
+  position: relative;
+  z-index: 4;
+}
+.TitleList .titles-wrapper {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  margin: 20px 0;
+  width: calc(100vw - 80px);
+  box-sizing: border-box;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+}
+.TitleList[data-loaded='true'] {
+  opacity: 1;
+  display: '';
+}
+
+.TitleList[data-loaded='false'] {
+  display: none;
+}
