--- a/src/style.scss
+++ b/src/style.scss
@@ -1,31 +1,13 @@
 .Search {
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-  -ms-flex-align: center;
-  align-items: center;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  width: 100%;
-  position: absolute;
-  left: 0;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-  -ms-flex-pack: center;
-  justify-content: center;
   pointer-events: none;
+  float: right;
 }
 .Search input {
   font-family: 'Lato', sans-serif;
   font-weight: 300;
   font-size: 14px;
   height: 37px;
-  width: 20%;
+  width: 20vw;
   background: transparent;
   color: #ffffff;
   -webkit-appearance: none;
@@ -42,17 +24,14 @@
 }
 .Search input:focus {
   border: 2px solid #e50914;
-  width: 30%;
+  width: 25vw;
 }
 
 .SearchResults {
+  position: relative;
+  top: 50px;
   max-width: 70vw;
-  position: fixed;
   z-index: 99;
-  top: 5rem;
-  left: 50%;
-  transform: translateX(-50%);
-  text-align-last: left;
 }
 .SearchResults .TitleList {
   padding: 3rem 2rem;
